
2009-05-13 cjg
 * Added $session to has_phrase calls.

2009-05-17 cjg
 * Added handling for PUT request data to Session
 * Added priv handling to REST interface
 * REST interface now supports PUT, on basic .txt fields.

2009-05-17 tdb
 * Fixed importing of files pointing to the wrong parent object.

2009-05-17 cjg
 * Fixed broken call in cgi/rest

2009-05-17 sf
 * Fixed file corruption problem on SWORD + removed some commnents

2009-05-26 tdb
 * Fixed MySQL-quoted commands in epadmin upgrade [Alexander Bergolth]

2009-05-27 tdb
 * Fixed login page not using phrase for title

2009-05-27 tdb
 * Fixed spurious history objects being created on document upload
 * Modified DataObj to clear changed fields after commit

2009-05-27 tdb
 * To supply file data to a File object use "_content", which can take
    a sub, file handle or scalar reference.
 * Storage controller will now write content to all configured plugins

2009-05-28 tdb
 * Fixed an HTML insertion bug in the <title> element [Brian D. Gregg]

2009-05-28 tdb
 * Moved most of SystemSettings.pm into system configuration files
 * Can now disable a repository through a system configuration setting

2009-06-03 cjg
 * New EPScript methods: citation_link, dataset, related_objects, url,
    doc_size, is_public, thumbnail_url, preview_link, icon, human_filesize,
    control_url, contact_email.
 * Fixed issue in related items which gave warnings if "type" not defined.
 * New EPC tag type: epc:debug, which is like print but sends the XML to 
    STDERR for debugging purposes.
 * Improvements to the epc:foreach processing (better handling of multiple
    object types in lists)
 * Fixed typo in comment on User.pm
 * Changed sword_depositor to an itemref from a text type.
 * Moved most of eprint_render.pl into a citation file: summary_page.xml

2009-06-03 cjg
 * Added new EPScript method render_data_row
 * Added phrase to go with it.
 * Used this to shorten the summary_page.xml file.