@@ -2075,9 +2075,4 @@ Titles and Help for the System Fields
 
 <epp:phrase id="user_fieldname_permission_group">Permission Group</epp:phrase>
 
-<epp:phrase id="data_row"><tr>
-  <th valign="top" align="right"><epc:pin name="name" />:</th>
-  <td valign="top"><epc:pin name="value" /></td>
-</tr></epp:phrase>
-
 </epp:phrases>
